--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html{
+    background-color: black;
+}
 p {
     font-size: 1.25em;
 }
@@ -9,7 +12,9 @@ nav a {
 }
 h1 {
     font-size: 3em;
+    color: #007d7b;
 }
 h2 {
     font-size: 2em;
+    color: #ffffff;
 }
