--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 html{
-    background-color: #000000;
-    border: #ffffff solid 25px;  
+    margin: 0;
+    border: #ffffff solid 25px;
+    padding: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 p {
     font-size: 1.25em;
@@ -17,23 +21,53 @@ h1 {
 h2 {
     font-size: 2em;
     text-align: center;
+    color: #ffffff;
 }
 nav {
     background-color: #000000;
-    color: #ffffff;
 }
 nav a {
     font-size: 1.5em;
 }
 body {
     background-color: #ffffff;
-    border: #000000 solid 60px;
+    border: #000000 solid 40px;
+}
+body > h2 {
+    color: #000000;
 }
 footer {
-    color: #ffffff;
-    background-color: #000000;
+
 }
 .contact {
-    background-color: #000000;
+
+}
+img {
+    display: grid;
+    position:relative;
+    left: 50%;
+    width: 125%;
+    max-width: 350px ;
+    transform: translate(-50%, -50%);
+    top: 155px;
+}
+.caption {
+    font-size: 20px;
     color: #ffffff;
+    position:relative;
+    text-align: center;
+    left: 50%;
+    width: 200px;
+    margin-left: -105px;
+    top: 15px;
+}
+.caption:nth-child(even) {
+    font-size: 20px;
+    color: #ffffff;
+    position:relative;
+    text-align: center;
+    left: 50%;
+    width: 200px;
+    margin-left: -105px;
+    top: 15px;
 }
