--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ html{
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    font-family: Arial;
 }
 p {
     font-size: 1.25em;
@@ -17,11 +18,14 @@ h1 {
     color: #007d7b;
     text-align: center;
     background-color: #ffffff;
+    text-transform: uppercase;
 }
 h2 {
     font-size: 2em;
     text-align: center;
     color: #ffffff;
+    text-transform: uppercase;
+    font-weight:bold;
 }
 nav {
     background-color: #000000;
@@ -31,43 +35,68 @@ nav a {
 }
 body {
     background-color: #ffffff;
-    border: #000000 solid 40px;
+    border: #000000 solid 50px;
 }
 body > h2 {
     color: #000000;
 }
-footer {
-
-}
-.contact {
-
+.images {
+    display: grid;
+    justify-items:center;
+    justify-content: center;
+    width: 100%;
 }
 img {
+    width: 100%;
+    height: 100%;
+}
+.caption  {
+    position: relative;
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    bottom: 35px;
+}
+.contact {
+    background-color: #000000;
+    color: #ffffff;
+    padding-bottom: 35px;
+}
+button {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
     display: grid;
-    position:relative;
-    left: 50%;
-    width: 125%;
-    max-width: 350px ;
-    transform: translate(-50%, -50%);
-    top: 155px;
-}
-.caption {
-    font-size: 20px;
+    margin: 0 auto;
+    padding: 8px 30px 10px; 
+    width: 60%;
+    background-color: #007d7b;
     color: #ffffff;
-    position:relative;
-    text-align: center;
-    left: 50%;
-    width: 200px;
-    margin-left: -105px;
-    top: 15px;
+    height: 50px;
+    border-radius: 20px;
 }
-.caption:nth-child(even) {
-    font-size: 20px;
-    color: #ffffff;
-    position:relative;
-    text-align: center;
-    left: 50%;
-    width: 200px;
-    margin-left: -105px;
-    top: 15px;
+footer {
+    margin-top: -26px;
+    margin-bottom: 25;
+}
+footer h2 {
+    background-color: #000000;
+    margin-bottom: -35px;
+    font-weight: 500;
+}
+figure:nth-of-type(even) .caption {
+    bottom: 95%;
+}
+[title="Iran"] , [title="Rocky"] , [title="UK"] {
+    color: #000000;
+}
+[title="Ireland"] , [title="Switzerland"] , [title="USA"]{
+    bottom: 100%;
+    color: #000000;
+}
+[title="Italy"]{
+    color: #000000;
+    top: -10%;
 }
