--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,32 @@
 html{
     margin: 0;
-    border: #ffffff solid 25px;
+    border: #ffffff solid 10px;
     padding: 0;
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
     font-family: Arial;
+    margin-top: -80px;
 }
 p {
     font-size: 1.25em;
+    font-weight: 600;
+    padding-left: 10px;
 }
 figcaption, label, input, small {
     font-size: 1em;
 }
 h1 {
-    font-size: 3em;
+    font-size: 35px;
     color: #007d7b;
     text-align: center;
     background-color: #ffffff;
     text-transform: uppercase;
+
+} 
+header{
+    margin-bottom: -15px ;
+
 }
 h2 {
     font-size: 2em;
@@ -27,11 +35,22 @@ h2 {
     text-transform: uppercase;
     font-weight:bold;
 }
+a {
+    text-decoration: none;
+    color: #ffffff;
+    padding-left: 10px;
+    
+}
 nav {
     background-color: #000000;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
 }
 nav a {
-    font-size: 1.5em;
+    font-size: 20px;
 }
 body {
     background-color: #ffffff;
@@ -39,6 +58,20 @@ body {
 }
 body > h2 {
     color: #000000;
+}
+.top {
+    font-size: 1em;
+    color: #ffffff;
+    border:#ffffff solid 1px ;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right: 5px;
+    bottom: 5px;
+    width: 75px;
+    height: 75px;
+    background-color: #000000;
 }
 .images {
     display: grid;
@@ -48,11 +81,10 @@ body > h2 {
 }
 img {
     width: 100%;
-    height: 100%;
 }
 .caption  {
     position: relative;
-    font-size: 20px;
+    font-size: 1em;
     color: #ffffff;
     text-align: center;
     width: 100%;
@@ -68,7 +100,7 @@ img {
     color: #ffffff;
     padding-bottom: 35px;
 }
-button {
+.submit {
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -90,9 +122,10 @@ form {
 }
 label{
     margin-bottom: -15px;
-    font-size: 20px;
+    font-size: 1em;
 }
 .text-box {
+    font-size: 1em;
     width: 80%;
     color: #007d7b;
     font-weight: bold;
@@ -114,7 +147,7 @@ footer h2 {
     font-size: 17px;
 }
 figure:nth-of-type(even) .caption {
-    bottom: 95%;
+    bottom: 90%;
 }
 [title="Iran"] , [title="Rocky"] , [title="UK"] {
     color: #000000;
@@ -126,4 +159,24 @@ figure:nth-of-type(even) .caption {
 [title="Italy"]{
     color: #000000;
     top: -10%;
+}
+@media screen and (min-width: 880px){
+    .images {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+    }
+    [title="Hawaii"] {
+        height: 100px;
+    }
+}
+@media screen and (min-width: 1300px){
+    .images {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 10px;
+    }
+    figure:nth-of-type(even) .caption {
+        bottom: 65%;
+    }
 }
