--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ html{
     vertical-align: baseline;
     font-family: Arial;
     margin-top: -80px;
+    border-top:#ffffff solid 100px ;
+    border-bottom:#ffffff solid 50px ;
 }
 p {
     font-size: 1.25em;
@@ -27,7 +29,8 @@ h1 {
 } 
 header{
     margin-bottom: -15px ;
-
+    margin-top: 5px;
+    
 }
 h2 {
     font-size: 2em;
@@ -36,11 +39,17 @@ h2 {
     text-transform: uppercase;
     font-weight:bold;
 }
+ul {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+}
 a {
     text-decoration: none;
     color: #ffffff;
     padding-left: 10px;
-    
 }
 nav {
     background-color: #000000;
@@ -55,7 +64,8 @@ nav a {
 }
 body {
     background-color: #ffffff;
-    border: #000000 solid 50px;
+    border-right: #000000 solid 35px;
+    border-left: #000000 solid 35px;
 }
 body > h2 {
     color: #000000;
@@ -74,19 +84,34 @@ body > h2 {
     height: 75px;
     background-color: #000000;
 }
-
+figure {
+    width: 95%;
+    margin: 10px;
+ }
+.images {
+    display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    justify-items:center;
+    justify-content: center;
+    width: 100%;
+}
 img {
     width: 100%;
     margin-top: -20px;
 }
 .caption  {
+    display: grid;
     position: relative;
     font-size: 1em;
     color: #ffffff;
     text-align: center;
     width: 100%;
-    height: 100%;
     bottom: 35px;
+}
+
+figure:nth-of-type(even) .caption {
+    width: 100%;
+    bottom: 95%;
 }
 .contact p {
     text-align: center;
@@ -96,6 +121,7 @@ img {
     background-color: #000000;
     color: #ffffff;
     padding-bottom: 35px;
+    padding-top: 5px;
 }
 .submit {
     text-align: center;
@@ -139,7 +165,6 @@ form {
 }
 footer {
     margin-top: -27px;
-    margin-bottom: 25;
 }
 footer h2 {
     background-color: #000000;
@@ -151,24 +176,27 @@ footer h2 {
     color: #000000;
 }
 [title="Ireland"] , [title="Switzerland"] , [title="USA"]{
-    bottom: 85%;
+    bottom: 95%;
     color: #000000;
 }
-[title="Italy"]{
+[title="Italy"] {
+    top: -10%;
     color: #000000;
-    top: -5%;
 }
 @media screen and (min-width: 880px){
     .images {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
+    ul {
+        justify-content: right;
+    }
     figure {
        width: 95%;
        margin: 10px;
     }
     [title="Hawaii"] {
-        height: 100px;
+        max-height: 50px;
     }
     [title="Ireland"] {
         bottom: 90%;
@@ -179,6 +207,11 @@ footer h2 {
     .text-box {
         width: 600px;
     }
+    body {
+        background-color: #ffffff;
+        border-left: #000000 solid 60px;
+        border-right: #000000 solid 60px;
+    }
 }
 @media screen and (min-width: 1300px){
     .images {
@@ -187,7 +220,7 @@ footer h2 {
         grid-gap: 10px;
     }
     figure:nth-of-type(even) .caption {
-        bottom: 60%;
+        bottom: 96%;
     }
     nav {
         text-align: right;
@@ -197,6 +230,20 @@ footer h2 {
     }
     img {
         width: 100%;
-
+    }
+    [title="Ireland"] {
+        bottom: 97%;
+    }
+    [title="Italy"] {
+        top: -5%;
+    }
+    [title="Iran"] , [title="Rocky"] , [title="UK"] {
+        color: #000000;
+        top: -97%;
+    }
+    body {
+        background-color: #ffffff;
+        border-left: #000000 solid 100px;
+        border-right: #000000 solid 100px;
     }
 }
